src/test/ui/type-alias-impl-trait/type-alias-impl-trait-with-cycle-error.rs
#![feature(type_alias_impl_trait)]

type Foo = impl Fn() -> Foo;
//~^ ERROR: could not find defining uses

fn crash(x: Foo) -> Foo {
    x
}

fn main() {

}
